# plane-drone

./: CMakeLists.txt  Makefile  README.md
.devcontainer/: devcontainer.json
controller/: controller.ino  protocol-serial-read.cpp
controller-cli/: controller
controller-cli/src/: main.py  service.py
controller-cli/src/html/: 404.html
controller-firmware/: controller-firmware.ino  protocol-serial.hpp
controller-webui/: main.py  server.py  service.py
controller-webui/html/: index.html
docs/: note.md
plane/: actuator.cpp  arduino_actuator.cpp  util.cpp
plane/core/: actuator.hpp  communication.hpp  util.hpp
scripts/: build  clean-build  init.sh
src/: arduino_actuator.cpp  arduino_communication.cpp  arduino_pinmap.hpp  main.c  main.cpp  main.h  pinmap.hpp  src.ino
src/atmega128/: actuator.c  communictaion.c  i2c.c  imu.c  nrf24l01.c  nrf24l01.h  pinmap.h  pwm.c  spi.c  timer.c  uart.c  util.c
src/core/: actuator.c  communication-protocol.h  communication.h  i2c.h  imu.h  pose.c  pwm.h  sensor.h  spi.h  timer.h  uart.h  util.h
src/pico/: actuator.c  communication.c  sensor.c  util.c
test/: core-actuator.hpp  core-communication-protocol.hpp  core-communication.hpp  core-imu.hpp  core-pose.cpp  core-pose.hpp  core-timer.hpp  infra-actuator.cpp  infra-communictaion.cpp  infra-imu.cpp  infra-timer.cpp  main.cpp  main.hpp  test.ino
